--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-seaborn
-pandas
-altair
-matplotlib
-numpy
-streamlit
+numpy 
+pandas 
+seaborn 
+streamlit 
 scipy
+altair
+shap
+joblib
+matplotlib
+scikit-learn 
+mlxtend
+xgboost 
